--- a/frontend/src/pages/user/UpdatePassword.css
+++ b/frontend/src/pages/user/UpdatePassword.css
@@ -51,7 +51,7 @@
   margin-top: 1rem;
 }
 
-button[type="submit"] {
+.update-user button[type="submit"] {
   width: 100%;
   background: #10d569;
   color: #fff;
@@ -65,6 +65,6 @@ button[type="submit"] {
   transition: background 0.2s;
 }
 
-button[type="submit"]:hover {
+.update-user button[type="submit"]:hover {
   background: #15803d;
 }
